--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ width: 100%;
 height: 100vh;
 background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), 
 url("assets/images/bg-banner.jpg");
-background-size: contain;
+background-size: cover;
 background-position: center;
 
 }
@@ -81,7 +81,66 @@ input {
     font-size: 16px;
     /* font-weight: 900px; */
 }
+hr{
+    border: 4px solid #282828;
+
+}
 .second-section{
+    display: flex;
+    width: 100%;
+    height: 500px;
+
+}
+.left-box{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 150px 0 0 40px;
+}
+
+.left-box h1{
+    font-size: 54px;
+    font-weight: 900px;
+
+}
+.left-box p{
+    padding-right: 20px;
+    font-size: 20px;
+    font-weight: 500px;
+}
+.right-box img {
+    width: 500px;
+    padding-top: 70px;
+    padding-right: 40px;
+    
+}
+.third-section{
     width: 100%;
     height: 400px;
+    display: flex;
+    padding-top: 50px;
+    padding-bottom: 450px;
+}
+.third-left img{
+    width: 500px;
+    padding-left: 60px;
+    padding-top: 50px;
+}
+
+.third-right{
+    padding-top: 60px;
+    padding-right: 60px;
+
+}
+.third-right h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900px;
+    font-size: 54px;
+}
+.third-right p {
+    font-family: 'Segoe UI';
+    font-size: 24px;
+    font-weight: normal;
+}
+.fourth-section {
+    width: 100%;
+    height: 900px;
 }
