--- a/style.css
+++ b/style.css
@@ -142,7 +142,44 @@ hr{
 }
 .fourth-section {
     width: 100%;
-    height: 900px;
-    text-align: center;
+    height: 400px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 100px 0 0 130px;
+
+}
+.fourth-section h1{
     font-size: 44px;
+    font-weight: 900;
+}
+.fourth-section p{
+    font-size: 22px;
+}
+.section-fifth{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.fifth-left img{
+    width: 500px;
+    padding-top: 20px;
+}
+.fifth-right{
+    padding: 100px 100px 0 0px;
+}
+.fifth-right h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 44px;
+    font-weight: 900;
+}
+.fifth-right p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20x;
+    font-weight: 400;
+}
+.sixth-section{
+    text-align: center;
+    font-size: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
