--- a/style.css
+++ b/style.css
@@ -178,8 +178,85 @@ hr{
     font-size: 20x;
     font-weight: 400;
 }
-.sixth-section{
-    text-align: center;
-    font-size: 50px;
+.last-section{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    width: 100%;
+    height: 350px;;
+    padding-left: 30px;
+    padding-right: 180px;
+    padding-top: 50px;
+    text-decoration: none;
+    color: #ffffff;
+    justify-content: space-between;
+}
+#faq{
+    font-size: 18px;
+}
+li{
+    list-style: none;
+    padding-top: 14px;
+    font-weight: 400;
+}
+.box1 ul li a{
+    color: #afafa7;
+    text-decoration: none;
+    font-size: 14px;
+    text-decoration: underline;
+    list-style: none;
+}
+
+.box2 ul li a{
+    color: #afafa7;
+    text-decoration: none;
+    padding-top: 10px;
+    font-size: 14px;
+    text-decoration: underline;
+   
+}
+.box3 ul li a{
+    color:  #afafa7;
+    text-decoration: underline;
+    padding-top: 10px;
+    font-size: 14px;
+    text-decoration: underline;
+    list-style: none;
+}
+h5{
+    font-size: 54px;
+    color:  #afafa7;
+    font-size: 14px;
+    text-decoration: underline;
+    list-style: none;
+}
+.footer{
+    margin-block-end: 40px;
+}
+.footer button {
+    padding: 6px 20px 6px 20px;
+    margin-left: 30px;
+    font-size: 14px;
+    background-color: rgba(0,0,0,0.6);
+    border: 1px solid #ffffff;
+    color: #ffffff;
+    border-radius: 2px;
+    margin-block-end: 4px;
+    cursor: pointer;
+    font-weight: bold;
+}
+.footer p{
+    color:  #afafa7;
+    padding-left: 30px;
+    font-size: 16px;
+    padding-top: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: normal;
+}
+h4{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    text-align: center;
+    padding-top: 50px;
+    color:#afafa7;
+    
 }
